# snakecheck

./: .gitignore  README.md  pyproject.toml  test_snakecheck_pytest.py
.cursor/rules/: feedback.mdc  validation.mdc
examples/: advanced_usage.py  basic_usage.py  composite_usage.py  dataflow_shrinking.py  stateful_usage.py  tracing_usage.py
snakecheck/: __init__.py  composite.py  core.py  generators.py  property.py  shrinking.py  trace.py
